# arviz-base

./: pyproject.toml  tox.ini
.github/workflows/: publish.yml
docs/source/tutorial/: WorkingWithDataTree.ipynb
src/arviz_base/: datasets.py  datasets.pyi  utils.py  utils.pyi
